Add PrismaOrm and SQL DB in Supabase

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@nuxt/image": "^1.8.0",
     "@nuxtjs/supabase": "^1.4.1",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@prisma/client": "^5.21.1",
+    "joi": "^17.13.3",
     "nuxt": "^3.13.0",
+    "prisma": "^5.21.1",
     "vue": "latest",
     "vue-router": "latest"
   }
